Attempting to fix spacing

--- a/Client/style/menu.css
+++ b/Client/style/menu.css
@@ -1,11 +1,15 @@
 #menu-background {
     background-color:rgb(255, 249, 237);
-    height:90vh;
     box-shadow:2px 10px 8px 5px #88888823;
     border-radius:5px;
     overflow-y:scroll;
     overflow-x:hidden;
-    margin-top: 20px;
+    position:absolute;
+    left:10px;
+    top:80px;
+    bottom:20px;
+    width:calc(50% - 20px);
+    z-index:-1;
 }
 
 /* https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
